fix: Prevent font auto-scaling on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@ img {
 
 html {
   background-color: #eeeeee;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
